--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </p>
 </div>
 
-<div class="container">
+<div class="container" id = "allImage">
 
     <div id="background">
         <div class="row">
